Guile NEWS --- history of user-visible changes.
Copyright (C) 1996-2024 Free Software Foundation, Inc.
See the end for copying conditions.

Please send Guile bug reports to bug-guile@gnu.org.


Changes in 3.0.11 (since 3.0.10)

* Notable changes

** R7RS `cond-expand` now supports `else` (<https://debbugs.gnu.org/71304>)

* Changes to the distribution

* Bug fixes

** test-hashing should now work on 32-bit systems
** GUILE-VERSION changes should propagate to .version and relevant Makefiles
   (<https://debbugs.gnu.org/72084>)


Changes in 3.0.10 (since 3.0.9)

* Notable changes

** Beginnings of support for alternate back-ends

A number of adaptations and additions of as-yet unstable interfaces have
been made to allow third-party projects such as the Hoot
Guile-to-WebAssembly whole-program compiler
(https://spritely.institute/hoot/) to use the Guile front-end and
optimizer.  Depending on how Hoot development goes, we may consider
adding first-class support for WebAssembly as a compilation target;
discussion is welcome on the guile-devel mailing list.

** `define` in all bodies

`define` adds a definition to the body in which it appears, as if each
non-tail definition or expression in that body were a binding in a
surrounding `letrec*` clause.  However, in some places, using `define`
would result in the annoying error "definition in expression context,
where definitions are not allowed", which could be fixed by explicitly
adding a surrounding binding contour, for example an empty `let`.  This
was because there was no implicit surrounding lexical binding contour
for the body of `when` and `unless`, for `cond` clauses, `case` clauses,
`and-let*` bodies, and `with-fluids`.  But no more; now these contexts
now create a binding contour, allowing the use of `define`.

** Two bug fixes of note regarding scoping of top-level variables

Previously, a reference to a top-level variable in a module other than