@@ -311,7 +311,15 @@
 
   (pass-if-equal "/" "/" (basename "/"))
   (pass-if-equal "//" "/" (basename "//"))
-  (pass-if-equal "a/b/c" "c" (basename "a/b/c")))
+  (pass-if-equal "a/b/c" "c" (basename "a/b/c"))
+
+  (pass-if-equal "a.b" (basename "a.b" "a.b"))
+  (pass-if-equal "a.b" (basename "/a.b" "a.b"))
+  (pass-if-equal "a" (basename "a.b" ".b"))
+  (pass-if-equal "a" (basename "/a.b" ".b"))
+
+  ;; https://debbugs.gnu.org/69437
+  (pass-if-equal "bar" (basename "foo/bar" "o/bar")))
 
 (delete-file (test-file))
 (when (file-exists? (test-symlink))
